HU venta de pila y arreglo de issues
* implementacion del login

* modificacion del login

* migraciones de base de datos

* revision

* arreglo de test

* creacion de login service

* merge desde development a LSaldarriaga

* arreglo de url

* modificacion de gitignore

* prueba de tests

* borrado de db de prueba y coverage

* implementacion de editar cliente, correcion de mensajes de error de cliente y implementacion de tests de cliente view y cliente form

* arreglo de bug en editar cliente

* arreglo en editar cliente, implementacion de agregar pila

* merge de migraciones

* arreglo en los test de cliente

* push

* test form pilas

* intento de arreglo de test pila

* arreglo de test pila

* correccion de errores de mantenibilad

* correccion de errores de mantenibilad

* arreglo en test de recuperar contraseña

* correccion de errores de mantenibilad

* correccion de errores de mantenibilad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion de errores de mantenibilidad

* correcion erroes mantenibilidad

* implementacion de agregar venta de pila

* arreglos en el frontend de venta de pila

* arreglo de issues

* arreglo de issues

* arreglo de issues

---------

Co-authored-by: lucas <lucassalna06gmail.com>

--- a/core/templates/usuario/password_change.html
+++ b/core/templates/usuario/password_change.html
@@ -184,8 +184,8 @@
             } else if (fieldName === 'confirmacion_contrasenia') {
                 errorMessage = validateConfirmationPassword(value);
             }
-
-            return { errorMessage };
+            
+            return { errorMessage: '' };
         }
 
         // Validación específica para contraseña nueva
@@ -218,7 +218,6 @@
                 return 'Las contraseñas no coinciden';
             }
             return '';
-
         }
 
         // Actualiza la UI según el resultado de la validación
